[gd_scene load_steps=35 format=3 uid="uid://clhbpoij5i0is"]

[ext_resource type="Script" path="res://enemy.gd" id="1_pdc1u"]
[ext_resource type="Script" path="res://chest_enemy.gd" id="2_w1l1e"]
[ext_resource type="Texture2D" uid="uid://cocrsj50q3njd" path="res://Human_chest.png" id="3_qdx7b"]
[ext_resource type="Script" path="res://enemy_legs.gd" id="4_ugii2"]
[ext_resource type="Texture2D" uid="uid://b3eujdsntmlag" path="res://Kangaro (1) (1).png" id="5_00jup"]
[ext_resource type="Texture2D" uid="uid://xw5plqu5dn8g" path="res://crabwalk.png" id="6_hlkw1"]
[ext_resource type="Texture2D" uid="uid://xm3xwcs7id80" path="res://BullCharge (1).png" id="7_g0fbr"]
[ext_resource type="Texture2D" uid="uid://bx1srau6tgwtm" path="res://BullChargeUp (1).png" id="8_3edi2"]
[ext_resource type="Texture2D" uid="uid://djowfelc1lklw" path="res://DustCloud.png" id="9_vtdkk"]
[ext_resource type="Script" path="res://bull_charge_attack_enemy.gd" id="10_w58ro"]
[ext_resource type="AudioStream" uid="uid://bertsitsib6g8" path="res://audios/boing.mp3" id="11_r2wyf"]
[ext_resource type="AudioStream" uid="uid://dsok433qg7upo" path="res://audios/scrape.mp3" id="12_0yb1j"]
[ext_resource type="Script" path="res://enemy_head.gd" id="13_tn5mk"]
[ext_resource type="Texture2D" uid="uid://bv1bl1aawwmp7" path="res://Alpaca_Sput.png" id="14_ovf5x"]
[ext_resource type="Texture2D" uid="uid://bxiroqh1afxij" path="res://GiraffeCentered.png" id="15_tfn2m"]
[ext_resource type="Script" path="res://giraffe_attack_l_e.gd" id="16_bk7go"]
[ext_resource type="Script" path="res://giraffe_attack_r_e.gd" id="17_wgqm1"]
[ext_resource type="AudioStream" uid="uid://xqc2h10g0t6l" path="res://audios/GatherAndSpit.mp3" id="18_wxhvo"]
[ext_resource type="AudioStream" uid="uid://cw05sphug8pqv" path="res://audios/swing.mp3" id="19_7b3jc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_phs7a"]
radius = 39.0
height = 100.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fu0ed"]
size = Vector2(126, 85)

[sub_resource type="Animation" id="Animation_vibc7"]
resource_name = "BullCharge"
length = 0.416675
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BullCharge:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BullChargeAttack")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"attack"
}, {
"args": [],
"method": &"attack"
}, {
"args": [],
"method": &"attack"
}, {
"args": [],
"method": &"attack"
}, {
"args": [],
"method": &"attack"
}, {
"args": [],
"method": &"attack"
}]
}

[sub_resource type="Animation" id="Animation_4cu3f"]
resource_name = "BullChargeUp"
length = 2.50001
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BullChargeUp:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666666, 0.75, 0.833333, 0.916666, 1, 1.08333, 1.16667, 1.25, 1.33333, 1.41667, 1.5, 1.58333, 1.66667, 1.75, 1.83333, 1.91667, 2, 2.08333, 2.16667, 2.25, 2.33333, 2.41667, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 0, 1, 2, 3, 4, 5, 6, 7, 8, 0, 1, 2, 3, 4, 5, 6, 7, 8, 8, 8, 8, 8]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"charge"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BullChargeUp/DustCloud:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666666, 0.75, 1, 1.08333, 1.16667, 1.25, 1.33333, 1.41667, 1.5, 1.58333, 1.75, 1.83333, 1.91667, 2, 2.08333, 2.16667, 2.25, 2.33333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 0, 1, 2, 3, 4, 5, 5, 6, 0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Scrape")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.25, 1, 1.75),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [0.0],
"method": &"play"
}, {
"args": [0.0],
"method": &"play"
}, {
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_qtqd1"]
resource_name = "Crabwalk"
length = 0.916675
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CrabLegs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.666666, 0.916666),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [],
"method": &"crabRandom"
}, {
"args": [],
"method": &"crabRandom"
}, {
"args": [],
"method": &"crabRandom"
}, {
"args": [],
"method": &"crabRandom"
}]
}

[sub_resource type="Animation" id="Animation_4px0y"]
resource_name = "KangarooJump"
length = 0.875006
step = 0.0625
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RooLegs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0625, 0.125, 0.1875, 0.25, 0.3125, 0.375, 0.4375, 0.5, 0.5625, 0.625, 0.6875, 0.75, 0.8125),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5625),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_jump"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Boing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5625),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_hv2fi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RooLegs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CrabLegs:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BullCharge:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BullChargeUp:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BullChargeUp/DustCloud:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pep86"]
_data = {
"BullCharge": SubResource("Animation_vibc7"),
"BullChargeUp": SubResource("Animation_4cu3f"),
"Crabwalk": SubResource("Animation_qtqd1"),
"KangarooJump": SubResource("Animation_4px0y"),
"RESET": SubResource("Animation_hv2fi")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dyecu"]
size = Vector2(180, 63)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2teb8"]
radius = 18.0
height = 86.0

[sub_resource type="Animation" id="Animation_d851a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LlamaHead:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Giraffe:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_2k5x5"]
resource_name = "alpaca_spit"
length = 1.33334
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LlamaHead:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667, 1, 1.08333, 1.16667, 1.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 0, 1]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.08333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_spit_fire"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Spit")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.666667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_hka3q"]
resource_name = "giraffe_attack"
length = 1.66668
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Giraffe:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667, 1, 1.08333, 1.16667, 1.25, 1.33333, 1.41667, 1.5, 1.58333, 1.66667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 19]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.08333, 1.25),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"giraffeAttack"
}, {
"args": [],
"method": &"endGiraffeAttack"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Swing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.08333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q3trf"]
_data = {
"RESET": SubResource("Animation_d851a"),
"alpaca_spit": SubResource("Animation_2k5x5"),
"giraffe_attack": SubResource("Animation_hka3q")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5lpkr"]
size = Vector2(213.822, 160.619)

[node name="ENEMY" type="Node2D" groups=["enemy"]]
position = Vector2(636, -150)
script = ExtResource("1_pdc1u")

[node name="CHEST" type="RigidBody2D" parent="." groups=["eHitbox"]]
position = Vector2(0, 2)
mass = 0.024
script = ExtResource("2_w1l1e")

[node name="Human_Collision" type="CollisionShape2D" parent="CHEST" groups=["eHitbox"]]
shape = SubResource("CapsuleShape2D_phs7a")

[node name="HumanChest" type="Sprite2D" parent="CHEST/Human_Collision"]
texture_filter = 1
rotation = -3.14159
scale = Vector2(3.12636, -2.86056)
texture = ExtResource("3_qdx7b")

[node name="PinJoint2D" type="PinJoint2D" parent="CHEST"]
position = Vector2(0, -25)
node_a = NodePath("../../Head")
node_b = NodePath("..")
bias = 0.041
angular_limit_upper = -0.575959

[node name="Legs" type="CharacterBody2D" parent="." groups=["eHitbox", "legs"]]
position = Vector2(0, 57)
script = ExtResource("4_ugii2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Legs" groups=["eHitbox"]]
position = Vector2(1, 6.5)
shape = SubResource("RectangleShape2D_fu0ed")

[node name="RooLegs" type="Sprite2D" parent="Legs/CollisionShape2D"]
texture_filter = 1
position = Vector2(-3, -3)
scale = Vector2(4.125, 4.125)
texture = ExtResource("5_00jup")
hframes = 4
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Legs/CollisionShape2D"]
libraries = {
"": SubResource("AnimationLibrary_pep86")
}

[node name="CrabLegs" type="Sprite2D" parent="Legs/CollisionShape2D"]
visible = false
texture_filter = 1
position = Vector2(0, -3)
scale = Vector2(4.125, 4.125)
texture = ExtResource("6_hlkw1")
hframes = 2
vframes = 6

[node name="BullCharge" type="Sprite2D" parent="Legs/CollisionShape2D"]
visible = false
texture_filter = 1
position = Vector2(0, -3)
scale = Vector2(-4.125, 4.125)
texture = ExtResource("7_g0fbr")
hframes = 2
vframes = 3

[node name="BullChargeUp" type="Sprite2D" parent="Legs/CollisionShape2D"]
texture_filter = 1
position = Vector2(-8, -3)
scale = Vector2(-4.125, 4.125)
texture = ExtResource("8_3edi2")
hframes = 2
vframes = 5

[node name="DustCloud" type="Sprite2D" parent="Legs/CollisionShape2D/BullChargeUp"]
texture_filter = 1
position = Vector2(8, 6.90909)
rotation = 3.14159
scale = Vector2(1.26263, -1.26263)
texture = ExtResource("9_vtdkk")
flip_h = true
hframes = 3
vframes = 3
frame = 8

[node name="BullChargeAttack" type="Area2D" parent="Legs/CollisionShape2D"]
script = ExtResource("10_w58ro")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Legs/CollisionShape2D/BullChargeAttack"]
visible = false
shape = SubResource("RectangleShape2D_dyecu")

[node name="PinJoint2D" type="PinJoint2D" parent="Legs"]
position = Vector2(0, -13)
node_a = NodePath("../../CHEST")
node_b = NodePath("..")

[node name="Knock" type="Timer" parent="Legs"]
wait_time = 0.5

[node name="Boing" type="AudioStreamPlayer2D" parent="Legs"]
stream = ExtResource("11_r2wyf")

[node name="Scrape" type="AudioStreamPlayer2D" parent="Legs"]
stream = ExtResource("12_0yb1j")

[node name="Identifier" type="Control" parent="Legs"]
layout_mode = 3
anchors_preset = 0
offset_left = -27.0
offset_top = -223.0
offset_right = 13.0
offset_bottom = -183.0
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="Legs/Identifier"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.362
anchor_top = 0.5
anchor_right = 0.362
anchor_bottom = 0.5
offset_left = -43.48
offset_top = -20.0
offset_right = 43.52
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
text = "Player One"
text_direction = 1
metadata/_edit_use_anchors_ = true

[node name="Head" type="RigidBody2D" parent="." groups=["eHitbox"]]
position = Vector2(-2, -34)
collision_layer = 2
script = ExtResource("13_tn5mk")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Head" groups=["eHitbox"]]
position = Vector2(-2, -8)
shape = SubResource("CapsuleShape2D_2teb8")

[node name="LlamaHead" type="Sprite2D" parent="Head/CollisionShape2D2"]
texture_filter = 1
position = Vector2(2, -31)
rotation = -3.14159
scale = Vector2(3.62434, -3.3162)
texture = ExtResource("14_ovf5x")
hframes = 4
vframes = 4

[node name="LlamaMouth" type="Node2D" parent="Head/CollisionShape2D2"]
position = Vector2(-38, -24)

[node name="Giraffe" type="Sprite2D" parent="Head/CollisionShape2D2"]
texture_filter = 1
position = Vector2(3, -156)
scale = Vector2(-1.97, 1.967)
texture = ExtResource("15_tfn2m")
hframes = 4
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Head/CollisionShape2D2"]
libraries = {
"": SubResource("AnimationLibrary_q3trf")
}

[node name="GiraffeAttackL" type="Area2D" parent="Head/CollisionShape2D2"]
position = Vector2(-3, 0)
script = ExtResource("16_bk7go")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head/CollisionShape2D2/GiraffeAttackL"]
position = Vector2(-50.3533, -42.8672)
rotation = -0.431619
shape = SubResource("RectangleShape2D_5lpkr")

[node name="ColorRect" type="ColorRect" parent="Head/CollisionShape2D2/GiraffeAttackL/CollisionShape2D"]
visible = false
offset_left = -100.0
offset_top = -71.0
offset_right = 89.0
offset_bottom = 69.0

[node name="GiraffeAttackR" type="Area2D" parent="Head/CollisionShape2D2"]
position = Vector2(-1, 8)
script = ExtResource("17_wgqm1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head/CollisionShape2D2/GiraffeAttackR"]
position = Vector2(44, -56)
rotation = -2.78781
scale = Vector2(1, -1)
shape = SubResource("RectangleShape2D_5lpkr")

[node name="ColorRect" type="ColorRect" parent="Head/CollisionShape2D2/GiraffeAttackR/CollisionShape2D"]
visible = false
offset_left = -100.0
offset_top = -71.0
offset_right = 89.0
offset_bottom = 69.0

[node name="Spit" type="AudioStreamPlayer2D" parent="Head"]
stream = ExtResource("18_wxhvo")

[node name="Swing" type="AudioStreamPlayer2D" parent="Head"]
stream = ExtResource("19_7b3jc")

[connection signal="timeout" from="Legs/Knock" to="Legs" method="_on_knock_timeout"]
[connection signal="body_entered" from="Head/CollisionShape2D2/GiraffeAttackL" to="Head/CollisionShape2D2/GiraffeAttackL" method="_on_body_entered"]
[connection signal="body_entered" from="Head/CollisionShape2D2/GiraffeAttackR" to="Head/CollisionShape2D2/GiraffeAttackR" method="_on_body_entered"]
